--- a/template/style.scss
+++ b/template/style.scss
@@ -507,6 +507,53 @@ h1.article_title {
     }
 }
 
+/* Collapsible ---------------------------------*/
+
+p.md_compiled.md_paragraph_html {
+    display: -webkit-box;
+}
+
+legend {
+    border:1px solid #999;
+    background:#fafafa;
+    text-align:center;
+    border-radius:1em;
+    margin:0 auto;
+    padding:0 0.5em;
+    transition: all 0.8s;
+    color: #666;
+    &:hover {
+        color: #fff;
+        background: #999;
+    }
+}
+
+#div_first_part {
+    background: #fafafa;
+    text-indent: 2em;
+    border-top: 1px solid #999;
+    padding: 0.1em 2em;
+    p {
+        margin: 0;
+        padding: 0.5em;
+    }
+    span {
+        margin: 0;
+        padding: 0.5em;
+    }
+}
+
+#div_second_part {
+    background: #fafafa;
+    text-indent: 2em;
+    border-top: 1px solid #999;
+    padding: 0.1em 2em;
+    span {
+        margin: 0;
+        padding: 0.5em;
+    }
+}
+
 /* Comments ---------------------------------*/
 #comments {
     margin-top: 4em;
