更新了折叠框的样式

--- a/template/style.scss
+++ b/template/style.scss
@@ -532,6 +532,7 @@ p.md_compiled.md_paragraph_html {
     background: #fafafa;
     text-indent: 2em;
     border-top: 1px solid #999;
+    border-bottom: 1px solid #999;
     padding: 0.1em 2em;
     transition: all 0.8s;
     p {
