--- a/template/post.jade
+++ b/template/post.jade
@@ -49,7 +49,9 @@ else
             var regex = /^\{\{(!)?(.*)\}\}$/;
             var len = p.length;
             for (var i = 0; i < len; i++) {
-            var matches = p[i].firstElementChild.textContent.match(regex);
+            var first = p[i].firstElementChild;
+            if (!first) {continue;}
+            var matches = first.textContent.match(regex);
             if (!matches) {continue;}
 
             var legendHtml = '<p class="md_compiled md_paragraph_html"><legend class="foldup-caption" style="cursor:hand" onclick="isHidden(this)"></legend></p >'; // don't add unescaped matches[2] here
@@ -73,7 +75,8 @@ else
             var p = document.querySelectorAll('#post p.md_block');
             for (var i = 0; i < p.length; i++) {
             var first = p[i].firstElementChild;
-            if (first.textContent !== '!Attention') {continue;}
+            if (!first) {continue;}
+            if (first.textContent !== '!Warning') {continue;}
             p[i].removeChild(first);
             p[i].className = 'warning';
             }
